fixed overlaping history links, scroll-snap.

--- a/maps.css
+++ b/maps.css
@@ -77,7 +77,7 @@
 .fb:hover,
 .wiki:hover,
 .yt:hover {
-  transform: scale(1.1);
+  transform: scale(1.06);
   background: #5d513e;
   transition: 150ms ease;
 }
@@ -93,9 +93,9 @@
       bottom: 5vh;
     }
 
-   .fb, .yt {
+   .fb, .yt, .ig, .wiki {
       animation-name: scaleUp;
-      animation-duration: 1s;
+      animation-duration: 5s;
       animation-timing-function: ease-in-out;
       animation-iteration-count: infinite;
       animation-direction: alternate;
